--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Shop Master - Machine shop logistics and management app"
+      content="ShopForge - Manufacturing control system"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Shop Master</title>
+    <title>ShopForge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
